<resources>
    <string name="app_name">ch04</string>
    <string name="initial_text">초기화</string>

    <string name="name_guideLine_text">이름</string>
    <string name="birth_guideLine_text">생년월일</string>
    <string name="bloodType_guideLine_text">혈액형</string>
    <string name="tel_guideLine_text">비상 연락처</string>
    <string name="detail_guideLine_text">주의 사항</string>

    <string name="call_button_contentDescription">전화걸기</string>
    <string name="edit_button_contentDescription">내용 수정</string>

    <string name="name_edit_text_hint">이름 입력</string>
    <string name="tel_edit_text_hint">전화번호 입력</string>


    <string name="date_pick_image_description">날짜선택</string>

    <string name="type_rh_plus">Rh+</string>
    <string name="type_rh_minus">Rh-</string>

    <string name="detail_visible_text">주의사항 노출</string>
    <string name="detail_editText_text">주의사항 입력</string>

    <string name="save_description">저장</string>


    <string name="default_birth">1970–01–01</string>
    <string name="default_name">홍길동</string>
    <string name="default_bloodType">Rh+A</string>
    <string name="default_phone">010–1234–5678</string>
</resources>